--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         AWS_DEFAULT_REGION = 'us-east-1' // Replace with your AWS region
         STACK_NAME = 'desamist-tech' // Replace with your CloudFormation stack name
-        TEMPLATE_FILE = 'template.yml' // Replace with the path to your CloudFormation template file
+        TEMPLATE_FILE = 'develop/template.yml' // Replace with the path to your CloudFormation template file
         //PARAMETERS_FILE = 'path/to/your/parameters.json' // Replace with the path to your CloudFormation parameters file
     }
 
@@ -15,17 +15,17 @@ pipeline {
             }
         }
 
-        stage('Install AWS CLI') {
-            steps {
-                script {
-                    sh 'curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"'
-                    // sh 'apt-get update && apt-get install -y unzip' // Install unzip
-                    sh 'unzip awscliv2.zip'
-                    sh './aws/install'
-                    sh 'aws --version'
-                }
-            }
-        }
+        // stage('Install AWS CLI') {
+        //     steps {
+        //         script {
+        //             sh 'curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"'
+        //             // sh 'apt-get update && apt-get install -y unzip' // Install unzip
+        //             sh 'unzip awscliv2.zip'
+        //             sh './aws/install'
+        //             sh 'aws --version'
+        //         }
+        //     }
+        // }
 
         stage('Deploy CloudFormation') {
             steps {
