--- a/jenkinsfile
+++ b/jenkinsfile
@@ -80,7 +80,7 @@ pipeline {
                     // Step 2: Use the assumed role credentials to perform AWS actions
                     withAWS(region: awsRegion, accessKeyId: accessKeyId, secretAccessKey: secretAccessKey, sessionToken: sessionToken) {
                         // Your AWS actions go here
-                        sh "aws cloudformation deploy --template-file cft.yaml --stack-name DEMO --capabilities CAPABILITY_IAM --region us-east-1"
+                        sh "aws cloudformation deploy --template-file ${TEMPLATE_FILE} --stack-name ${STACK_NAME} --capabilities CAPABILITY_IAM --region ${AWS_REGION}"
                         // sh 'aws cloudformation delete-stack --stack-name ${STACK_NAME}  --region ${AWS_DEFAULT_REGION}'
                     }
                 }
