--- a/jenkinsfile
+++ b/jenkinsfile
@@ -81,7 +81,7 @@ pipeline {
                     withAWS(region: awsRegion, accessKeyId: accessKeyId, secretAccessKey: secretAccessKey, sessionToken: sessionToken) {
                         // Your AWS actions go here
                         sh "aws cloudformation deploy --template-file ${TEMPLATE_FILE} --stack-name ${STACK_NAME} --capabilities CAPABILITY_IAM --region ${AWS_REGION}"
-                        // sh 'aws cloudformation delete-stack --stack-name ${STACK_NAME}  --region ${AWS_DEFAULT_REGION}'
+                        // sh 'aws cloudformation delete-stack --stack-name ${STACK_NAME}  --region ${AWS_REGION}'
                     }
                 }
             }
